@@ -1034,8 +1034,7 @@ protected:
 class RemoveIgProfFilter : public IgProfFilter
 {
 public:
-  virtual void post(NodeInfo *parent,
-                    NodeInfo *node)
+  virtual void pre(NodeInfo *parent, NodeInfo *node)
     {
       if (!parent)
         return;
@@ -1045,14 +1044,12 @@ public:
       ASSERT(node->originalSymbol()->FILE);
  
       if (strstr(node->originalSymbol()->FILE->NAME.c_str(), "IgProf.")
-          || strstr(node->originalSymbol()->FILE->NAME.c_str(), "IgHook."))
-      {
-        mergeToNode(parent, node);
-      }
+	  || strstr(node->originalSymbol()->FILE->NAME.c_str(), "IgHook."))
+        parent->removeChild(node);
     }
   
   virtual std::string name(void) const { return "igprof remover"; }
-  virtual enum FilterType type(void) const { return POST; }
+  virtual enum FilterType type(void) const { return PRE; }
 };
 
 class RemoveStdFilter : public IgProfFilter
